<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">个人信息助手</string>

    <!-- 数据库和文件路径 -->
    <string name="dir">/pmas</string>
    <string name="app_dir">/app</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>
    <string name="no_data">网络异常...</string>
    <string name="contact">联系</string>
    <string name="note">记事</string>
    <string name="schedule">日程</string>
    <string name="setting">设置</string>
    <string name="weather">天气</string>
    <string name="neighborhood">周边</string>
    <string name="about">关于</string>
    <string name="loading">正在加载，请稍后...</string>
    <string name="group">群组</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="contact_edit">编辑联系人</string>
    <string name="note_edit">编辑记事</string>
    <string name="schedule_edit">编辑日程</string>
    <string name="saveContact">添加联系人</string>
    <string name="saveNote">添加记事</string>
    <string name="calender">添加日程</string>

    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_repassword_hint">请再此输入密码</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_repwd">确认密码</string>
    <string name="login_email">邮箱</string>
    <string name="home">主页</string>
    <string name="return2">返回</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd"><![CDATA[忘记密码>]]></string>
    <string name="add_schedule">新增</string>
    <string name="title">标题</string>
    <string name="input_title">请输入标题</string>
    <string name="note_type">类型</string>
    <string name="choice">请选择</string>
    <string name="note_content">内容</string>
    <string name="note_input_content">最多只能输入200个字</string>
    <string name="add_note">新增记事</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="test">测试</string>
    <string name="save_success">保存成功</string>
    <string name="update_success">更新成功</string>
    <string name="delete_success">删除成功</string>
    <string name="your_network_has_disconnected">网络连接失败</string>
    <string name="set_login">请登录</string>
    <string name="my_phone">头像</string>
    <string name="username">用户名</string>
    <string name="alter_password">修改密码</string>
    <string name="note_group_add_name">名称</string>
    <string name="note_group_add_description">描述</string>
    <string name="add_note_group">新增记事类型</string>
    <string name="menu_code">二维码</string>
    <string name="synchronous">同步</string>
    <string name="contact_group">联系人群组</string>
    <string name="edit">编辑</string>
    <string name="add">新增</string>
    <string name="name">名称</string>
    <string name="add_contact_group">添加群组</string>
    <string name="contact_name">名字</string>
    <string name="birthday">生日</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="contact_showInfo">显示个人信息</string>
    <string name="contact_group_edit">编辑群组</string>
    <string name="upate">修改</string>
    <string name="schedule_add">添加日程</string>
    <string name="schedule_title">标题</string>
    <string name="schedule_type">类型</string>
    <string name="schedule_content">内容</string>
    <string name="schedule_time">提醒日期</string>
    <string name="contact_add">添加联系人</string>

    <string name="health">#339933</string>
    <string name="family">#9966ff</string>
    <string name="friend">#99cc00</string>
    <string name="love">#cc3300</string>
    <string name="work">#0000cc</string>
    <string name="study">#cc0099</string>
    <string name="interest">#ff9900</string>
    <string name="maincolor">#13b3f2</string>
    <string name="periphery">周边定位</string>
    <string name="score_search">成绩查询</string>
    <string name="kaoqin_search">考勤查询</string>
    <string name="location_finish">启动完成</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="date">日期</string>
    <string name="search">个人查询</string>
    <string name="login_code_hint">验证码</string>
    <string name="realname">姓名</string>
    <string name="depart_name">班级</string>
    <string name="sex">性别</string>
    <string name="role_name">角色</string>
    <string name="depart">子部门查询</string>
    <string name="Io">进出类型查询</string>
    <string name="AttendRecord">考勤汇总</string>
    <string name="AttendRecordDetail">考勤汇总详情</string>
    <string name="AttendForm">考勤报表</string>
    <string name="AttendCount">考勤统计</string>
    <string name="StudentAttendance">个人考勤</string>
    <string name="gerenkaoqin">个人考勤</string>
    <string name="kaoqinhuizong">考勤汇总</string>
    <string name="kaoqinhuizongxiangxi">考勤汇总详细</string>
    <string name="kaoqintongji">考勤统计</string>
    <string name="kaoqinbaobiao">考勤报表</string>
    <string name="chengjichaxun">成绩查询</string>
    <string name="time">早中晚</string>
    <string name="attendName">实际考勤</string>
    <string name="wenli">文理</string>
    <string name="studen_name">姓名</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string-array name="effects">
        <item>联系人群组</item>
        <item>考勤查询</item>
        <item>成绩查询</item>
    </string-array>
</resources>
