<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/attendance_depart_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/depart" />
    <item
        android:id="@+id/attendance_Io_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/Io" />
    <item
        android:id="@+id/attendance_AttendRecord_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/AttendRecord" />
    <item
        android:id="@+id/attendance_AttendCount_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/AttendCount" />
    <item
        android:id="@+id/attendance_AttendCountController_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/AttendCountController" />
    <item
        android:id="@+id/attendance_viewAttendCountController_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/viewAttendCountController" />

    <item
        android:id="@+id/attendance_search_actions"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/search" />
</menu>