<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:fbutton="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp">

        <RelativeLayout
                android:id="@+id/rl_set_my_info_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_top_bg"
                android:minHeight="80dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/mylove">

            <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/my_phone"
                    android:textColor="@color/mylove"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        style="@style/Smile.ImageView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/head"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_set_my_info_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_mid_bg"
                android:minHeight="50dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp">

            <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/mylove"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:text="@string/username"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        style="@style/Smile.TextView._Black"
                        android:drawablePadding="10dp"/>

                <ImageView
                        style="@style/Smile.ImageView"
                        android:layout_width="20dp"
                        android:src="@drawable/register_bottom_arrow"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_set_my_info_alter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_mid_bg"
                android:minHeight="50dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp">

            <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/alter_password"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/mylove"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        style="@style/Smile.TextView._Black"
                        android:drawablePadding="10dp"/>

                <ImageView
                        style="@style/Smile.ImageView"
                        android:layout_width="20dp"
                        android:src="@drawable/register_bottom_arrow"/>
            </LinearLayout>
        </RelativeLayout>

        <org.mo.common.ui.button.FButton
                android:id="@+id/btn_set_my_info_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/fbutton_color_alizarin"
                android:textSize="@dimen/text_size_large"/>

    </LinearLayout>
</ScrollView>